force-app/main/default/objects/Form_1__c/Form_1__c.object-meta.xml
<CustomObject>
    <description>HR - Form to advertise an open position</description>
    <label>Form 1</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Form 1 Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form 1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>