force-app/main/default/objects/Form_1__c/fields/Appointment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Start_Date__c</fullName>
    <description>is updated by Process Builder - "HR Update pos vacant date with Appt End Date and Update 700 Filer"</description>
    <label>Appointment Start Date</label>
    <type>Date</type>
</CustomField>