force-app/main/default/objects/Form_1__c/fields/Apps_Released_to_Division_Date__c.field-meta.xml
<CustomField>
    <fullName>Apps_Released_to_Division_Date__c</fullName>
    <description>From latest F1 cert</description>
    <label>Apps Released to Division Date</label>
    <type>Date</type>
</CustomField>