force-app/main/default/objects/Form_1__c/fields/CalHR_Under_Review__c.field-meta.xml
<CustomField>
    <fullName>CalHR_Under_Review__c</fullName>
    <description>Updated by DLRS 'HR Max CalHR Under Review'</description>
    <label>CalHR - Under Review</label>
    <type>Date</type>
</CustomField>