force-app/main/default/objects/Form_1__c/fields/Canceled_Old_Form1_ID_2__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Old_Form1_ID_2__c</fullName>
    <description>For 'canceled due to amendment' to reference new amended ID. This field is to be updated w wfr.</description>
    <label>ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>