force-app/main/default/objects/Form_1__c/fields/Candidate_Accepted_Appointed_Date__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Accepted_Appointed_Date__c</fullName>
    <description>from latest "Candidate Accepts" status</description>
    <label>Candidate Accepted/Appointed Date</label>
    <type>Date</type>
</CustomField>