force-app/main/default/objects/Form_1__c/fields/Candidate_Declined__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Declined__c</fullName>
    <description>Latest Candidate Declined status, updated by flow "HR Form 1 Status - Latest Status - Individual Status PART 2"</description>
    <label>Candidate Declined</label>
    <type>Date</type>
</CustomField>