force-app/main/default/objects/Form_1__c/fields/Cert_List_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Cert_List_Expiration_Date__c</fullName>
    <description>From latest F1 cert; updated by Flow "HR Update Form 1 with Cert Status Information"</description>
    <label>Cert List Expiration Date</label>
    <type>Date</type>
</CustomField>