force-app/main/default/objects/Form_1__c/fields/Cert_List_Number__c.field-meta.xml
<CustomField>
    <fullName>Cert_List_Number__c</fullName>
    <description>From latest F1 cert</description>
    <label>Cert List Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>