force-app/main/default/objects/Form_1__c/fields/Class_Title__c.field-meta.xml
<CustomField>
    <fullName>Class_Title__c</fullName>
    <description>Stores Present Position's field (Position object): ClassTitle__c. This field serves as filter for HR reports which involve Form1 or Form1-Status</description>
    <formula>SEC1_Position__r.Class_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Title</label>
    <type>Text</type>
</CustomField>