force-app/main/default/objects/Form_1__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Classification</label>
    <referenceTo>Classification__c</referenceTo>
    <relationshipLabel>Form 1s</relationshipLabel>
    <relationshipName>Form_1s</relationshipName>
    <type>Lookup</type>
</CustomField>