force-app/main/default/objects/Form_1__c/fields/Complete_2__c.field-meta.xml
<CustomField>
    <fullName>Complete_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated by PB "HR Update Form 1 w Latest F1 Status and Date"</description>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>