force-app/main/default/objects/Form_1__c/fields/Date_of_Status_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Status_Completed__c</fullName>
    <description>Used by HR Form 1 records.   Field is hidden from users since it is used for flow output.  Flow   HR_Update_Form_1_Date_of_Status_Completed.  SR-013476</description>
    <label>Date of Status Completed</label>
    <type>Date</type>
</CustomField>