force-app/main/default/objects/Form_1__c/fields/Division_Manual_Entry__c.field-meta.xml
<CustomField>
    <fullName>Division_Manual_Entry__c</fullName>
    <description>For Form 1 on blanket position. The 'present position' is not presented, user is to fill in this field to populate formula field 'Form 1 Division'. New values added 10/21/2022</description>
    <label>Division (Manual Entry)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCT</fullName>
            </value>
            <value>
                <fullName>BSO</fullName>
            </value>
            <value>
                <fullName>BUDGET</fullName>
            </value>
            <value>
                <fullName>CHSWC</fullName>
            </value>
            <value>
                <fullName>DAS</fullName>
            </value>
            <value>
                <fullName>DLSE</fullName>
            </value>
            <value>
                <fullName>DLSE/PIU</fullName>
            </value>
            <value>
                <fullName>DLSR</fullName>
            </value>
            <value>
                <fullName>DOSH</fullName>
            </value>
            <value>
                <fullName>DWC</fullName>
            </value>
            <value>
                <fullName>FFC</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>LEGACY</fullName>
            </value>
            <value>
                <fullName>OD</fullName>
            </value>
            <value>
                <fullName>ODR</fullName>
            </value>
            <value>
                <fullName>OIS</fullName>
            </value>
            <value>
                <fullName>OSHAB</fullName>
            </value>
            <value>
                <fullName>OSHSB</fullName>
            </value>
            <value>
                <fullName>RTWSP</fullName>
            </value>
            <value>
                <fullName>SIP</fullName>
            </value>
            <value>
                <fullName>WCAB</fullName>
            </value>
            <value>
                <fullName>OAS/HR</fullName>
            </value>
            <value>
                <fullName>OAS/CNTRS</fullName>
            </value>
            <value>
                <fullName>OAS/FCLTS</fullName>
            </value>
            <value>
                <fullName>OAS/BS</fullName>
            </value>
            <value>
                <fullName>OAS/TPSSB</fullName>
            </value>
            <value>
                <fullName>OAS/AS</fullName>
            </value>
            <value>
                <fullName>OAS/RTW</fullName>
            </value>
            <value>
                <fullName>OD/HQ</fullName>
            </value>
            <value>
                <fullName>OD/AFU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>