force-app/main/default/objects/Form_1__c/fields/Effective_Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date_Completed__c</fullName>
    <description>Used by HR Form 1 records.  Field hidden from users since it is used for flow output.  HR_Update_Form_1_Effective_Date_Complete.  SR-013476</description>
    <label>Effective Date Completed</label>
    <type>Date</type>
</CustomField>