force-app/main/default/objects/Form_1__c/fields/F1_Cert_Status_Latest_Date__c.field-meta.xml
<CustomField>
    <fullName>F1_Cert_Status_Latest_Date__c</fullName>
    <label>F1 Cert Status Latest Date</label>
    <summarizedField>Form_1_Cert_Status__c.CreatedDate</summarizedField>
    <summaryForeignKey>Form_1_Cert_Status__c.Form_1__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>