force-app/main/default/objects/Form_1__c/fields/F1_Date_of_Completed_Status__c.field-meta.xml
<CustomField>
    <fullName>F1_Date_of_Completed_Status__c</fullName>
    <description>Date of Status when Form1 Status Type Equals Completed</description>
    <inlineHelpText>Date of Status when Form1 Status Type Equals Completed</inlineHelpText>
    <label>F1 Date of Completed Status</label>
    <summarizedField>Form_1_Status__c.Date_of_Status__c</summarizedField>
    <summaryFilterItems>
        <field>Form_1_Status__c.Form1_Status_Type__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_1_Status__c.Form_1__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>