force-app/main/default/objects/Form_1__c/fields/F1_Status_Date_Created__c.field-meta.xml
<CustomField>
    <fullName>F1_Status_Date_Created__c</fullName>
    <description>To copy the F1 Status Date created for reporting purpose</description>
    <label>F1 Status Date Created</label>
    <type>Date</type>
</CustomField>