force-app/main/default/objects/Form_1__c/fields/Final_Response_Due_Date_for_report__c.field-meta.xml
<CustomField>
    <fullName>Final_Response_Due_Date_for_report__c</fullName>
    <description>For formula field "Action/Status" (Heather's report requirement), this field is on page layout "Minimum Qualification Withhold" Layout</description>
    <label>Final Response Due Date</label>
    <type>Date</type>
</CustomField>