force-app/main/default/objects/Form_1__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <formula>IF(TEXT(MONTH(DATEVALUE(CreatedDate))) = "1", TEXT(YEAR(DATEVALUE(CreatedDate)-365)),

IF(TEXT(MONTH(DATEVALUE(CreatedDate))) = "2", TEXT(YEAR(DATEVALUE(CreatedDate)-365)),

IF(TEXT(MONTH(DATEVALUE(CreatedDate))) = "3", TEXT(YEAR(DATEVALUE(CreatedDate)-365)),

IF(TEXT(MONTH(DATEVALUE(CreatedDate))) = "4", TEXT(YEAR(DATEVALUE(CreatedDate)-365)),

IF(TEXT(MONTH(DATEVALUE(CreatedDate))) = "5", TEXT(YEAR(DATEVALUE(CreatedDate)-365)),

IF(TEXT(MONTH(DATEVALUE(CreatedDate))) = "6", TEXT(YEAR(DATEVALUE(CreatedDate)-365)),

TEXT(YEAR(DATEVALUE(CreatedDate)) 
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fiscal Year</label>
    <type>Text</type>
</CustomField>