force-app/main/default/objects/Form_1__c/fields/Form_1_Age__c.field-meta.xml
<CustomField>
    <fullName>Form_1_Age__c</fullName>
    <formula>IF(Complete_2__c = FALSE &amp;&amp; ISBLANK(Date_Completed__c),TODAY()-Requested_Effective_Date__c,IF(Complete_2__c = TRUE &amp;&amp; ISBLANK(Date_Completed__c), TODAY() - Requested_Effective_Date__c, IF(Complete_2__c = True &amp;&amp;  !ISBLANK(Date_Completed__c),Date_Completed__c - Requested_Effective_Date__c, TODAY() - Requested_Effective_Date__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form 1 Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>