force-app/main/default/objects/Form_1__c/fields/General_Recruitment_Status_2__c.field-meta.xml
<CustomField>
    <fullName>General_Recruitment_Status_2__c</fullName>
    <label>General Recruitment Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>