force-app/main/default/objects/Form_1__c/fields/Hold_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reasons__c</fullName>
    <description>Updated by flow "HR Update Form 1 On Hold Status Reasons"</description>
    <label>Hold Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>