force-app/main/default/objects/Form_1__c/fields/HR_Part_1_Approved__c.field-meta.xml
<CustomField>
    <fullName>HR_Part_1_Approved__c</fullName>
    <description>From latest F1-Status record, updated by DLRS</description>
    <label>HR – Part 1 Approved</label>
    <type>Date</type>
</CustomField>