force-app/main/default/objects/Form_1__c/fields/HR_PART_2_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>HR_PART_2_Approval_Date__c</fullName>
    <description>From latest F1-Status record</description>
    <label>HR - PART 2 Approval Date</label>
    <type>Date</type>
</CustomField>