force-app/main/default/objects/Form_1__c/fields/HR_Part_2_Approved__c.field-meta.xml
<CustomField>
    <fullName>HR_Part_2_Approved__c</fullName>
    <description>From latest F1 status; updated by DLRS</description>
    <label>HR – Part 2 Approved</label>
    <type>Date</type>
</CustomField>