force-app/main/default/objects/Form_1__c/fields/HR_Part_2_Return_to_Program_Reasons__c.field-meta.xml
<CustomField>
    <fullName>HR_Part_2_Return_to_Program_Reasons__c</fullName>
    <description>Updated by flow "HR Update Form 1 with F1-Status Fields"</description>
    <label>HR Part 2 Return to Program Reasons</label>
    <length>255</length>
    <type>Text</type>
</CustomField>