force-app/main/default/objects/Form_1__c/fields/Job_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Control_Number__c</fullName>
    <description>from latest F1 Cert</description>
    <label>Job Control Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>