force-app/main/default/objects/Form_1__c/fields/Job_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Post_Date__c</fullName>
    <description>Store max DLRS "HR Max Job Post Date"</description>
    <label>Job Post Date</label>
    <type>Date</type>
</CustomField>