force-app/main/default/objects/Form_1__c/fields/List_of_Panel_Members__c.field-meta.xml
<CustomField>
    <fullName>List_of_Panel_Members__c</fullName>
    <description>from latest HR – Part 2 Approved. updated by flow 'HR Form 1 Status - Latest Status - Individual Status'</description>
    <label>List of Panel Members</label>
    <length>255</length>
    <type>Text</type>
</CustomField>