force-app/main/default/objects/Form_1__c/fields/Minimum_Qualification_Withhold__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Qualification_Withhold__c</fullName>
    <description>Latest status, updated by DLRS 'HR Max Minimum Qualification Withhold'</description>
    <label>Minimum Qualification Withhold</label>
    <type>Date</type>
</CustomField>