force-app/main/default/objects/Form_1__c/fields/Name_of_Employee__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Employee__c</fullName>
    <description>Is updated by Process Builder - "HR Update pos vacant date with Appt End Date and Update 700 Filer"</description>
    <label>Name of Employee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>