force-app/main/default/objects/Form_1__c/fields/Number_of_Apps_Released__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Apps_Released__c</fullName>
    <description>From latest F1 cert</description>
    <label>Number of Apps Released</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>