force-app/main/default/objects/Form_1__c/fields/Number_of_Days_F1_Processed__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days_F1_Processed__c</fullName>
    <description>Number of Elapsed days from when a Form 1 Created Date till Form 1 Completed Date</description>
    <formula>IF (NOT(ISNULL(F1_Date_of_Completed_Status__c)), (F1_Date_of_Completed_Status__c -  DATEVALUE(CreatedDate)), 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of Elapsed days from when a Form 1 Created Date till Form 1 Completed Date</inlineHelpText>
    <label>Number of Days F1 Processed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>