force-app/main/default/objects/Form_1__c/fields/Number_of_F1_Cert_Records__c.field-meta.xml
<CustomField>
    <fullName>Number_of_F1_Cert_Records__c</fullName>
    <description>This summarizes the number of Cert Status Records and it will help for the formula field that flags the latest cert status for a report</description>
    <label>Number of F1 Cert Records</label>
    <summaryForeignKey>Form_1_Cert_Status__c.Form_1__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>