force-app/main/default/objects/Form_1__c/fields/P2_RtoP_Duration_Hidden__c.field-meta.xml
<CustomField>
    <fullName>P2_RtoP_Duration_Hidden__c</fullName>
    <description>Sum up all P2 RtoP Durations from F1-Status. This field is update by DLRS</description>
    <label>Part 2 Return to Program Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>