force-app/main/default/objects/Form_1__c/fields/P3_UR_Duration_Hidden__c.field-meta.xml
<CustomField>
    <fullName>P3_UR_Duration_Hidden__c</fullName>
    <description>DLRS rollup Part 3 Under Review Duration</description>
    <label>Part 3 Under Review Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>