force-app/main/default/objects/Form_1__c/fields/Part_Time_Fraction__c.field-meta.xml
<CustomField>
    <fullName>Part_Time_Fraction__c</fullName>
    <label>Part-Time Fraction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>